--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta name="robots" content="noindex,follow">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/basic.css"> -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<p></p>
+	<nav class="top-nav">
+		<a href="#"><img src="" alt="" class="logo">afaf</a>
+		<button class="btn_courses">Browse courses</button>
+	</nav>
 </body>
 </html>
