Add nav-menu, home block, information block and project block

--- a/ru.html
+++ b/ru.html
@@ -15,9 +15,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<nav class="top-nav">
-		<a href="#"><img src="" alt="" class="logo">afaf</a>
-		<button class="btn_courses">Browse courses</button>
+	<nav class="topnav">
+		<a href="#"><img src="assets/img/Logo.png" alt="" class="logo"></a>
+		<button class="btn_courses">Просмотреть курсы</button>
+		<div class="change_lang"><a href="#" class="noactive">RU</a><p>|</p><a href="eng.html">ENG</a></div>
 	</nav>
+	<main>
+		<div class="home">
+			<h1>Подготовка следующего поколения<br> цифровых создателей</h1>
+			<button class="apply_now"></button>
+		</div>
+	</main>
 </body>
 </html>
