--- a/eng.html
+++ b/eng.html
@@ -44,19 +44,19 @@
 		<div class="information_block">
 			<h2>The Design Squad 120 in figures</h2>
 			<div class="static_block">
-				<div class="students">
+				<div>
 					<h3>18</h3>
 					<p>Students</p>
 				</div>
-				<div class="units">
+				<div>
 					<h3>3</h3>
 					<p>Units</p>
 				</div>
-				<div class="weeks">
+				<div>
 					<h3>10</h3>
 					<p>Weeks</p>
 				</div>
-				<div class="projects">
+				<div>
 					<h3>6</h3>
 					<p>Projects</p>
 				</div>
@@ -88,6 +88,101 @@
 				<div>
 					<img src="assets/img/Project image(6).png" alt="">
 					<p>Wellness - UI</p>
+				</div>
+			</div>
+		</div>
+		<div class="students_block">
+			<h2>The Students</h2>
+			<div class="main_students_block">
+				<div class="personal_student_block">
+					<img src="assets/img/Paul Photo.jpg" alt="">
+					<h3>Paul</h3>
+					<p>Beard World Record</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Céline img.jpg" alt="">
+					<h3>Céline</h3>
+					<p>Typography Master</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Julia img.jpg" alt="">
+					<h3>Julia</h3>
+					<p>Illustration Queen</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Lisa img.jpg" alt="">
+					<h3>Lisa</h3>
+					<p>Wine Lover</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Yasmina img.jpg" alt="">
+					<h3>Yasmina</h3>
+					<p>Bombom Girl</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Jerome img.jpg" alt="">
+					<h3>Jerome</h3>
+					<p>Crooner Voice</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Mellisa img.jpg" alt="">
+					<h3>Mellisa</h3>
+					<p>Sweet Sunshine</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Martin img.jpg" alt="">
+					<h3>Martin</h3>
+					<p>Purchase Addict</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Gwen img.jpg" alt="">
+					<h3>Gwen</h3>
+					<p>Story-Teller</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Christophe img.jpg" alt="">
+					<h3>Christophe</h3>
+					<p>Gru’s Bestfriend</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Agathe img.jpg" alt="">
+					<h3>Agathe</h3>
+					<p>Creativity Saver</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Oriana img.jpg" alt="">
+					<h3>Oriana</h3>
+					<p>Party Manager</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Cecilia img.jpg" alt="">
+					<h3>Cecilia</h3>
+					<p>Salsa Teacher</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Fabien img.jpg" alt="">
+					<h3>Fabien</h3>
+					<p>Agile Boss</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/PE img.jpg" alt="">
+					<h3>Pierre-Etienne</h3>
+					<p>Mario Kart Champion</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Morgan img.jpg" alt="">
+					<h3>Morgan</h3>
+					<p>Micro-Interactions Boss</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/Margot img.jpg" alt="">
+					<h3>Margot</h3>
+					<p>Yogi Master</p>
+				</div>
+				<div class="personal_student_block">
+					<img src="assets/img/François img.jpg" alt="">
+					<h3>François</h3>
+					<p>Speedy DJ</p>
 				</div>
 			</div>
 		</div>
