--- a/eng.html
+++ b/eng.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="HelWorld">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta name="robots" content="noindex,follow">
+	<meta name="theme-color" content="red">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- <link rel="stylesheet" href="assets/css/basic.css"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -187,5 +188,10 @@
 			</div>
 		</div>
 	</main>
+	<footer>
+		<form action="">
+			<input type="search">
+		</form>
+	</footer>
 </body>
 </html>
