--- a/eng.html
+++ b/eng.html
@@ -208,5 +208,9 @@
 			</div>
 		</div>
 	</main>
+	<footer>
+		<h2>Wanna be a part of it?</h2>
+		<button class="apply_now">Apply now</button>
+	</footer>
 </body>
 </html>
