--- a/ru.html
+++ b/ru.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="HelWorld">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta name="robots" content="noindex,follow">
+	<meta name="theme-color" content="red">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- <link rel="stylesheet" href="assets/css/basic.css"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +23,194 @@
 	</nav>
 	<main>
 		<div class="home">
-			<h1>Подготовка следующего поколения<br> цифровых создателей</h1>
-			<button class="apply_now"></button>
+			<h1>Подготовка следующего поколения цифровых создателей</h1>
+			<button class="apply_now">Подай заявку</button>
+		</div>
+		<div class="programm_block">
+			<h2>Исследуйте UX/UI Дизайн</h2>
+			<p>Станьте UX/UI дизайнером. Изучите понятный для пользователя дизайн с помощью дизайнерского мышления и подтвердите свои идеи исследованием пользователя, созданием прототипов и тестированием пользователя. Изучите UI и IxD для создания прототипов ваших решений с использованием методов визуального и интерактивного проектирования. Мы предлагаем эту дорожку в двух вариантах:</p>
+			<div class="programm_selection_block">
+				<div class="full_time_programm_block">
+					<mark>9 недель // полный рабочий день</mark>
+					<h3>Программа на полный рабочий день</h3>
+					<p>С понедельника по пятницу с 9:00 до 18:00</p>
+				</div>
+				<div class="part-time_programm_block">
+					<mark>24 недели // неполный рабочий день</mark>
+					<h3>Программа на неполный рабочий день</h3>
+					<p>Понедельник и среда с 18:30 до 21:30, в субботу с 10:00 до 17:00</p>
+				</div>
+			</div>
+		</div>
+		<div class="information_block">
+			<h2>Дизайнерская группа 120 в цифрах</h2>
+			<div class="static_block">
+				<div>
+					<h3>18</h3>
+					<p>Студенты</p>
+				</div>
+				<div>
+					<h3>3</h3>
+					<p>Задания</p>
+				</div>
+				<div>
+					<h3>10</h3>
+					<p>Недель</p>
+				</div>
+				<div>
+					<h3>6</h3>
+					<p>Проектов</p>
+				</div>
+			</div>
+		</div>
+		<div class="project_block">
+			<h2>Проекты</h2>
+			<div class="projects">
+				<div>
+					<img src="assets/img/Project image(1).png" alt="">
+					<p>Автоматизация почтовых отделений</p>
+				</div>
+				<div>
+					<img src="assets/img/Project image(2).png" alt="">
+					<p>Опыт работы в музее</p>
+				</div>
+				<div>
+					<img src="assets/img/Project image(3).png" alt="">
+					<p>Оздоровительный - UX</p>
+				</div>
+				<div>
+					<img src="assets/img/Project image(4).png" alt="">
+					<p>Добавление функций</p>
+				</div>
+				<div>
+					<img src="assets/img/Project image(5).png" alt="">
+					<p>Кураторское Мероприятие на Микросайте</p>
+				</div>
+				<div>
+					<img src="assets/img/Project image(6).png" alt="">
+					<p>Оздоровительный - UI</p>
+				</div>
+			</div>
+		</div>
+		<div class="students_block">
+			<h2>Студенты</h2>
+			<div class="main_students_block">
+				<div class="student-s_personal_block">
+					<img src="assets/img/Paul Photo.jpg" alt="">
+					<h3>Paul</h3>
+					<p>Мировой рекордсмен по бороде</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Céline img.jpg" alt="">
+					<h3>Céline</h3>
+					<p>Мастер типографии</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Julia img.jpg" alt="">
+					<h3>Julia</h3>
+					<p>Королева иллюстариций</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Lisa img.jpg" alt="">
+					<h3>Lisa</h3>
+					<p>Любитель вина</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Yasmina img.jpg" alt="">
+					<h3>Yasmina</h3>
+					<p>Бомбическая девушка</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Jerome img.jpg" alt="">
+					<h3>Jerome</h3>
+					<p>Певучий голос</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Mellisa img.jpg" alt="">
+					<h3>Mellisa</h3>
+					<p>Сладкий солнечный свет</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Martin img.jpg" alt="">
+					<h3>Martin</h3>
+					<p>Зависимый от покупок</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Gwen img.jpg" alt="">
+					<h3>Gwen</h3>
+					<p>Рассказчик</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Christophe img.jpg" alt="">
+					<h3>Christophe</h3>
+					<p>Лучший друг Гру</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Agathe img.jpg" alt="">
+					<h3>Agathe</h3>
+					<p>Экономит на творчестве</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Oriana img.jpg" alt="">
+					<h3>Oriana</h3>
+					<p>Менеджер тусовок</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Cecilia img.jpg" alt="">
+					<h3>Cecilia</h3>
+					<p>Учитель сальсы</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Fabien img.jpg" alt="">
+					<h3>Fabien</h3>
+					<p>Проворный босс</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/PE img.jpg" alt="">
+					<h3>Pierre-Etienne</h3>
+					<p>Чемпион Марио Карт</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Morgan img.jpg" alt="">
+					<h3>Morgan</h3>
+					<p>Босс Микро-взаимодействий</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/Margot img.jpg" alt="">
+					<h3>Margot</h3>
+					<p>Мастер Йоги</p>
+				</div>
+				<div class="student-s_personal_block">
+					<img src="assets/img/François img.jpg" alt="">
+					<h3>François</h3>
+					<p>Быстрый диджей</p>
+				</div>
+			</div>
+		</div>
+		<div class="teacher-s_block">
+			<h2>Учителя</h2>
+			<div class="main_teacher-s_block">
+				<div class="teacher-s_personal_block">
+					<img src="assets/img/Jay img.jpg" alt="">
+					<h3>Jérémie</h3>
+					<p>Уважаемый лидер</p>
+				</div>
+				<div class="teacher-s_personal_block">
+					<img src="assets/img/Ella img.jpg" alt="">
+					<h3>Ella</h3>
+					<p>Экстремальный пользователь</p>
+				</div>
+				<div class="teacher-s_personal_block">
+					<img src="assets/img/Elo img.jpg" alt="">
+					<h3>Elo</h3>
+					<p>Богиня пользовательского интерфейса</p>
+				</div>
+			</div>
 		</div>
 	</main>
+	<footer>
+		<h2>Хочешь быть частью этого?</h2>
+		<button class="apply_now">Подай заявку</button>
+	</footer>
 </body>
 </html>
