--- a/ru.html
+++ b/ru.html
@@ -67,27 +67,27 @@
 			<h2>Проекты</h2>
 			<div class="projects">
 				<div>
-					<img src="assets/img/Project image(1).png" alt="">
+					<img src="assets/img/Post_office_Automat.png" alt="">
 					<p>Автоматизация почтовых отделений</p>
 				</div>
 				<div>
-					<img src="assets/img/Project image(2).png" alt="">
+					<img src="assets/img/Experience_in_the_museum.png" alt="">
 					<p>Опыт работы в музее</p>
 				</div>
 				<div>
-					<img src="assets/img/Project image(3).png" alt="">
+					<img src="assets/img/Wellness-UX.png" alt="">
 					<p>Оздоровительный - UX</p>
 				</div>
 				<div>
-					<img src="assets/img/Project image(4).png" alt="">
+					<img src="assets/img/Add_a_Feature.png" alt="">
 					<p>Добавление функций</p>
 				</div>
 				<div>
-					<img src="assets/img/Project image(5).png" alt="">
+					<img src="assets/img/Curated_Microsite_Event.png" alt="">
 					<p>Кураторское Мероприятие на Микросайте</p>
 				</div>
 				<div>
-					<img src="assets/img/Project image(6).png" alt="">
+					<img src="assets/img/Wellness-UI.png" alt="">
 					<p>Оздоровительный - UI</p>
 				</div>
 			</div>
@@ -96,92 +96,92 @@
 			<h2>Студенты</h2>
 			<div class="main_students_block">
 				<div class="student-s_personal_block">
-					<img src="assets/img/Paul Photo.jpg" alt="">
+					<img src="assets/img/PauL.jpg" alt="">
 					<h3>Paul</h3>
 					<p>Мировой рекордсмен по бороде</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Céline img.jpg" alt="">
+					<img src="assets/img/Céline.jpg" alt="">
 					<h3>Céline</h3>
 					<p>Мастер типографии</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Julia img.jpg" alt="">
+					<img src="assets/img/Julia.jpg" alt="">
 					<h3>Julia</h3>
 					<p>Королева иллюстариций</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Lisa img.jpg" alt="">
+					<img src="assets/img/Lisa.jpg" alt="">
 					<h3>Lisa</h3>
 					<p>Любитель вина</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Yasmina img.jpg" alt="">
+					<img src="assets/img/Yasmina.jpg" alt="">
 					<h3>Yasmina</h3>
 					<p>Бомбическая девушка</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Jerome img.jpg" alt="">
+					<img src="assets/img/Jerome.jpg" alt="">
 					<h3>Jerome</h3>
 					<p>Певучий голос</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Mellisa img.jpg" alt="">
+					<img src="assets/img/Mellisa.jpg" alt="">
 					<h3>Mellisa</h3>
 					<p>Сладкий солнечный свет</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Martin img.jpg" alt="">
+					<img src="assets/img/Martin.jpg" alt="">
 					<h3>Martin</h3>
 					<p>Зависимый от покупок</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Gwen img.jpg" alt="">
+					<img src="assets/img/Gwen.jpg" alt="">
 					<h3>Gwen</h3>
 					<p>Рассказчик</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Christophe img.jpg" alt="">
+					<img src="assets/img/Christophe.jpg" alt="">
 					<h3>Christophe</h3>
 					<p>Лучший друг Гру</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Agathe img.jpg" alt="">
+					<img src="assets/img/Agathe.jpg" alt="">
 					<h3>Agathe</h3>
 					<p>Экономит на творчестве</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Oriana img.jpg" alt="">
+					<img src="assets/img/Oriana.jpg" alt="">
 					<h3>Oriana</h3>
 					<p>Менеджер тусовок</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Cecilia img.jpg" alt="">
+					<img src="assets/img/Cecilia.jpg" alt="">
 					<h3>Cecilia</h3>
 					<p>Учитель сальсы</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Fabien img.jpg" alt="">
+					<img src="assets/img/Fabien.jpg" alt="">
 					<h3>Fabien</h3>
 					<p>Проворный босс</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/PE img.jpg" alt="">
+					<img src="assets/img/PE.jpg" alt="">
 					<h3>Pierre-Etienne</h3>
 					<p>Чемпион Марио Карт</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Morgan img.jpg" alt="">
+					<img src="assets/img/Morgan.jpg" alt="">
 					<h3>Morgan</h3>
 					<p>Босс Микро-взаимодействий</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/Margot img.jpg" alt="">
+					<img src="assets/img/Margot.jpg" alt="">
 					<h3>Margot</h3>
 					<p>Мастер Йоги</p>
 				</div>
 				<div class="student-s_personal_block">
-					<img src="assets/img/François img.jpg" alt="">
+					<img src="assets/img/François.jpg" alt="">
 					<h3>François</h3>
 					<p>Быстрый диджей</p>
 				</div>
@@ -191,19 +191,19 @@
 			<h2>Учителя</h2>
 			<div class="main_teacher-s_block">
 				<div class="teacher-s_personal_block">
-					<img src="assets/img/Jay img.jpg" alt="">
+					<img src="assets/img/Jay.jpg" alt="">
 					<h3>Jérémie</h3>
 					<p>Уважаемый лидер</p>
 				</div>
 				<div class="teacher-s_personal_block">
-					<img src="assets/img/Ella img.jpg" alt="">
+					<img src="assets/img/Ella.jpg" alt="">
 					<h3>Ella</h3>
 					<p>Экстремальный пользователь</p>
 				</div>
 				<div class="teacher-s_personal_block">
-					<img src="assets/img/Elo img.jpg" alt="">
+					<img src="assets/img/Elo.jpg" alt="">
 					<h3>Elo</h3>
-					<p>Богиня пользовательского интерфейса</p>
+					<p>Богиня UI</p>
 				</div>
 			</div>
 		</div>
