--- a/ru.html
+++ b/ru.html
@@ -96,7 +96,7 @@
 			<h2>Студенты</h2>
 			<div class="main_students_block">
 				<div class="student-s_personal_block">
-					<img src="assets/img/PauL.jpg" alt="">
+					<img src="assets/img/Paul.jpg" alt="">
 					<h3>Paul</h3>
 					<p>Мировой рекордсмен по бороде</p>
 				</div>
